kustomize/arr-stack/readarr/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readarr
  labels:
    app: readarr
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@hourly"
    keel.sh/match-tag: "true"
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "true"
        sidecar.opentelemetry.io/inject: "true"
      labels:
        app: readarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nardine
      containers:
      - name: readarr
        image: ghcr.io/hotio/readarr:latest
        resources:
            limits:
              memory: 2Gi
              cpu: 2000m
            requests:
              memory: 512Mi
              cpu: 500m
        ports:
        - name: readarr
          containerPort: 8787
        livenessProbe:
          httpGet:
            path: /
            port: 8787
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8787
          initialDelaySeconds: 10
          periodSeconds: 15
        volumeMounts:
        - name: readarr
          mountPath: /config
        - name: ebooks
          mountPath: /data/ebooks
        - name: p2p
          mountPath: /data/p2p/complete/books
        - name: usenet
          mountPath: /data/usenet/complete/books
      volumes:
      - name: readarr
        hostPath:
          path: /k8s/readarr
          type: Directory
      - name: ebooks
        hostPath:
          path: /data/ebooks
          type: Directory
      - name: p2p
        hostPath:
          path: /data/p2p/complete/books
          type: Directory
      - name: usenet
        hostPath:
          path: /data/usenet/complete/books
          type: Directory
