kustomize/arr-stack/readarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.16
  selector:
    app: readarr
  type: LoadBalancer
  ports:
    - port: 8787
      targetPort: readarr
