kustomize/arr-stack/readarr/readarr-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ebook-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: readarr
          port: 8787
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
